Updates to structure and file naming

--- a/code/simulation/BasicSimulation.ipynb
+++ b/code/simulation/BasicSimulation.ipynb
@@ -204,7 +204,7 @@
     "# cpr_dist = cpr_dist[cpr_dist>0]\n",
     "\n",
     "### Populate data dictionary for input into simulation function\n",
-    "with open('%sdata/build_dict_LFS_v1.txt' % home, 'r') as file:\n",
+    "with open('%sdata/build_dict.txt' % home, 'r') as file:\n",
     "    data = file.read()    \n",
     "exec(data)\n",
     "\n",
@@ -228,7 +228,7 @@
    "outputs": [],
    "source": [
     "### Import simulation functions\n",
-    "import ABMrun_LFS_cleaned as sim\n",
+    "import ABMrun as sim\n",
     "\n",
     "steady_state_length = 250 # Number of rounds to estimate transition matrices in the steady state of the model\n",
     "fitrun_num = 10 # Run of calibration algorithm - leave as is\n",
