--- a/code/simulation/ShockSimulation.ipynb
+++ b/code/simulation/ShockSimulation.ipynb
@@ -253,7 +253,7 @@
     "# cpr_dist = cpr_dist[cpr_dist>0]\n",
     "\n",
     "### Populate data dictionary for input into simulation function\n",
-    "with open('%sdata/build_dict_LFS_v1.txt' % home, 'r') as file:\n",
+    "with open('%sdata/build_dict.txt' % home, 'r') as file:\n",
     "    data = file.read()    \n",
     "exec(data)\n",
     "\n",
@@ -277,7 +277,7 @@
    "outputs": [],
    "source": [
     "### Import simulation functions\n",
-    "import ABMrun_LFS_cleaned as sim\n",
+    "import ABMrun as sim\n",
     "\n",
     "# Set gradient descent calibration parameters (leave as-is)\n",
     "fitrun_num = 10 # Number of times to run calibration algorithm\n",
