--- a/code/simulation/ShockSimulation.ipynb
+++ b/code/simulation/ShockSimulation.ipynb
@@ -88,7 +88,7 @@
     "    # Run a simulation\n",
     "    model_output = sim.shock_run_simulation(shock_type, impacted_industries, input_data_dict_temp)\n",
     "    \n",
-    "    pickle.dump(model_output, open(f'{home}data/shock_results/model_output_shock{shock_type}_singleshock{impacted_industries}_set{k}_rep{i}.sav', 'wb'))\n",
+    "    pickle.dump(model_output, open(f'{home}data/model_output_shock{shock_type}_singleshock{impacted_industries}_set{k}_rep{i}.sav', 'wb'))\n",
     "    \n",
     "    # Unpack simulation output\n",
     "    wor_ids,wor_jobs,wor_job_node_ids,wor_ages,wor_consumption_prefs, \\\n",
@@ -121,7 +121,7 @@
     "    # Run a simulation\n",
     "    model_output = sim.shock_run_simulation(shock_type, impacted_industries, input_data_dict_temp)\n",
     "\n",
-    "    pickle.dump(model_output, open(f'{home}data/shock_results/model_output_shock{shock_type}_shock{n_shocked}_set{k}_rep{i}.sav', 'wb'))\n",
+    "    pickle.dump(model_output, open(f'{home}data/model_output_shock{shock_type}_shock{n_shocked}_set{k}_rep{i}.sav', 'wb'))\n",
     "    \n",
     "    # Unpack simulation output\n",
     "    wor_ids,wor_jobs,wor_job_node_ids,wor_ages,wor_consumption_prefs, \\\n",
@@ -155,12 +155,12 @@
    "source": [
     "### Populate data dictionary for input into simulation function\n",
     "\n",
-    "file = open(f'{home}data/20220520 KF PrePub 2001646/activation_dict.txt', \"r\")\n",
+    "file = open(f'{home}data/activation_dict.txt', \"r\")\n",
     "contents = file.read()\n",
     "adict = ast.literal_eval(contents)\n",
     "file.close()\n",
     "\n",
-    "file = open(f'{home}data/20220520 KF PrePub 2001646/income_dict_LFS_{regvar}_{sicvar}_{socvar}.txt', \"r\")\n",
+    "file = open(f'{home}data/income_dict_LFS_{regvar}_{sicvar}_{socvar}.txt', \"r\")\n",
     "contents = file.read()\n",
     "idict = ast.literal_eval(contents)\n",
     "file.close()\n",
@@ -201,9 +201,9 @@
     "t_ss=0 # Dummy value for the time for the initial flows to stabilise (leave set to 0)\n",
     "\n",
     "### Read in empirical transition matrices. convert to numpy arrays\n",
-    "reg_trans_mat = pd.read_csv(open(f'{home}data/20220520 KF PrePub 2001646/region_transitiondensity_empirical_LFS_{regvar}_{sicvar}_{socvar}.csv', 'rb'), header=0,index_col=0)\n",
-    "sic_trans_mat = pd.read_csv(open(f'{home}data/20220520 KF PrePub 2001646/sic_transitiondensities_empirical_LFS_{regvar}_{sicvar}_{socvar}.csv', 'rb'), header=0,index_col=0)\n",
-    "soc_trans_mat = pd.read_csv(open(f'{home}data/20220520 KF PrePub 2001646/soc_transitiondensities_empirical_LFS_{regvar}_{sicvar}_{socvar}.csv', 'rb'), header=0,index_col=0)\n",
+    "reg_trans_mat = pd.read_csv(open(f'{home}data/region_transitiondensity_empirical_LFS_{regvar}_{sicvar}_{socvar}.csv', 'rb'), header=0,index_col=0)\n",
+    "sic_trans_mat = pd.read_csv(open(f'{home}data/sic_transitiondensities_empirical_LFS_{regvar}_{sicvar}_{socvar}.csv', 'rb'), header=0,index_col=0)\n",
+    "soc_trans_mat = pd.read_csv(open(f'{home}data/soc_transitiondensities_empirical_LFS_{regvar}_{sicvar}_{socvar}.csv', 'rb'), header=0,index_col=0)\n",
     "\n",
     "reg_trans_mat = reg_trans_mat.to_numpy()\n",
     "sic_trans_mat = sic_trans_mat.to_numpy()\n",
@@ -242,7 +242,7 @@
     "# pos_dist = pos_dist[pos_dist.reg_id!=22].copy()\n",
     "\n",
     "### Read in income data for generating wages\n",
-    "inc_dist = pd.read_csv(open(f'{home}data/20220520 KF PrePub 2001646/incomedist_LFS_{regvar}_{sicvar}_{socvar}.csv'))\n",
+    "inc_dist = pd.read_csv(open(f'{home}data/incomedist_LFS_{regvar}_{sicvar}_{socvar}.csv'))\n",
     "# inc_dist = inc_dist[inc_dist.reg_id!=22].copy()\n",
     "\n",
     "### Read in age distribution\n",
@@ -284,9 +284,9 @@
     "sim_num = 15 #number of simulations to run in parallel\n",
     "\n",
     "# Generate nu-modified similarity matrices\n",
-    "reg_nu_mat = np.mean(pickle.load(open(f'{home}data/calibration/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_nus_reg_scost_mat_LFS.sav', 'rb')), axis=2)\n",
-    "sic_nu_mat = np.mean(pickle.load(open(f'{home}data/calibration/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_nus_sic_scost_mat_LFS.sav', 'rb')), axis=2)\n",
-    "soc_nu_mat = np.mean(pickle.load(open(f'{home}data/calibration/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_nus_soc_scost_mat_LFS.sav', 'rb')), axis=2)\n",
+    "reg_nu_mat = np.mean(pickle.load(open(f'{home}data/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_nus_reg_scost_mat_LFS.sav', 'rb')), axis=2)\n",
+    "sic_nu_mat = np.mean(pickle.load(open(f'{home}data/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_nus_sic_scost_mat_LFS.sav', 'rb')), axis=2)\n",
+    "soc_nu_mat = np.mean(pickle.load(open(f'{home}data/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_nus_soc_scost_mat_LFS.sav', 'rb')), axis=2)\n",
     "\n",
     "node_reg_sim_mat_input = np.zeros(node_reg_sim_mat.shape)\n",
     "node_sic_sim_mat_input = np.zeros(node_sic_sim_mat.shape)\n",
