--- a/code/simulation/Calibration.ipynb
+++ b/code/simulation/Calibration.ipynb
@@ -146,12 +146,12 @@
    "source": [
     "### Populate data dictionary for input into simulation function\n",
     "\n",
-    "file = open(f'{home}data/20220520 KF PrePub 2001646/activation_dict.txt', \"r\")\n",
+    "file = open(f'{home}data/activation_dict.txt', \"r\")\n",
     "contents = file.read()\n",
     "adict = ast.literal_eval(contents)\n",
     "file.close()\n",
     "\n",
-    "file = open(f'{home}data/20220520 KF PrePub 2001646/income_dict_LFS_{regvar}_{sicvar}_{socvar}.txt', \"r\")\n",
+    "file = open(f'{home}data/income_dict_LFS_{regvar}_{sicvar}_{socvar}.txt', \"r\")\n",
     "contents = file.read()\n",
     "idict = ast.literal_eval(contents)\n",
     "file.close()\n",
@@ -192,9 +192,9 @@
     "t_ss=0 # Dummy value for the time for the initial flows to stabilise (leave set to 0)\n",
     "\n",
     "### Read in empirical transition matrices. convert to numpy arrays\n",
-    "reg_trans_mat = pd.read_csv(open(f'{home}data/20220520 KF PrePub 2001646/region_transitiondensity_empirical_LFS_{regvar}_{sicvar}_{socvar}.csv', 'rb'), header=0,index_col=0)\n",
-    "sic_trans_mat = pd.read_csv(open(f'{home}data/20220520 KF PrePub 2001646/sic_transitiondensities_empirical_LFS_{regvar}_{sicvar}_{socvar}.csv', 'rb'), header=0,index_col=0)\n",
-    "soc_trans_mat = pd.read_csv(open(f'{home}data/20220520 KF PrePub 2001646/soc_transitiondensities_empirical_LFS_{regvar}_{sicvar}_{socvar}.csv', 'rb'), header=0,index_col=0)\n",
+    "reg_trans_mat = pd.read_csv(open(f'{home}data/region_transitiondensity_empirical_LFS_{regvar}_{sicvar}_{socvar}.csv', 'rb'), header=0,index_col=0)\n",
+    "sic_trans_mat = pd.read_csv(open(f'{home}data/sic_transitiondensities_empirical_LFS_{regvar}_{sicvar}_{socvar}.csv', 'rb'), header=0,index_col=0)\n",
+    "soc_trans_mat = pd.read_csv(open(f'{home}data/soc_transitiondensities_empirical_LFS_{regvar}_{sicvar}_{socvar}.csv', 'rb'), header=0,index_col=0)\n",
     "\n",
     "\n",
     "reg_trans_mat = reg_trans_mat.to_numpy()\n",
@@ -233,7 +233,7 @@
     "pos_dist = pd.read_csv(open(f'{home}data/positiondist_reweighted_LFS_{regvar}_{sicvar}_{socvar}.csv'))\n",
     "\n",
     "### Read in income data for generating wages\n",
-    "inc_dist = pd.read_csv(open(f'{home}data/20220520 KF PrePub 2001646/incomedist_LFS_{regvar}_{sicvar}_{socvar}.csv'))\n",
+    "inc_dist = pd.read_csv(open(f'{home}data/incomedist_LFS_{regvar}_{sicvar}_{socvar}.csv'))\n",
     "\n",
     "### Read in age distribution\n",
     "age_dist = pd.read_csv(open(f'{home}data/age_dist_reweighted_LFS_{regvar}_{sicvar}_{socvar}.csv'), dtype=\"float64\")['AGE']\n",
@@ -846,7 +846,7 @@
     "            plt.xlabel(\"Iteration\")\n",
     "            \n",
     "            plt.tight_layout()\n",
-    "            plt.savefig(f'{home}data/calibration/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_run{k}_LFS_combinedmetrics.png', bbox_inches=\"tight\", dpi=500)\n",
+    "            plt.savefig(f'{home}data/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_run{k}_LFS_combinedmetrics.png', bbox_inches=\"tight\", dpi=500)\n",
     "            plt.show() \n",
     "            \n",
     "        \n",
@@ -894,14 +894,14 @@
     "            plt.xlabel(\"Iteration\")\n",
     "    \n",
     "            plt.tight_layout()\n",
-    "            plt.savefig(f'{home}data/calibration/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_run{k}_LFS_pearsonfrob.png', bbox_inches=\"tight\", dpi=500)\n",
+    "            plt.savefig(f'{home}data/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_run{k}_LFS_pearsonfrob.png', bbox_inches=\"tight\", dpi=500)\n",
     "            plt.show()    \n",
     "        \n",
     "        if count == 20: # NB: currently have a set break after 20 iterations of the fitting algorithm, based on current parametrisation of model, however can remove and run until while condition is met if starting fresh\n",
     "            \n",
-    "            pickle.dump(sim_reg_tmat_ts, open(f'{home}data/calibration/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_run{k}_reg_tmat_LFS.sav', 'wb'))\n",
-    "            pickle.dump(sim_sic_tmat_ts, open(f'{home}data/calibration/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_run{k}_sic_tmat_LFS.sav', 'wb'))\n",
-    "            pickle.dump(sim_soc_tmat_ts, open(f'{home}data/calibration/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_run{k}_soc_tmat_LFS.sav', 'wb'))\n",
+    "            pickle.dump(sim_reg_tmat_ts, open(f'{home}data/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_run{k}_reg_tmat_LFS.sav', 'wb'))\n",
+    "            pickle.dump(sim_sic_tmat_ts, open(f'{home}data/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_run{k}_sic_tmat_LFS.sav', 'wb'))\n",
+    "            pickle.dump(sim_soc_tmat_ts, open(f'{home}data/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_run{k}_soc_tmat_LFS.sav', 'wb'))\n",
     "\n",
     "            break\n",
     "    \n",
@@ -975,19 +975,19 @@
    "outputs": [],
    "source": [
     "# Save calibration output\n",
-    "pickle.dump(reg_nu_mat_store, open(f'{home}data/calibration/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_nus_reg_scost_mat_LFS.sav', 'wb'))\n",
-    "pickle.dump(sic_nu_mat_store, open(f'{home}data/calibration/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_nus_sic_scost_mat_LFS.sav', 'wb'))\n",
-    "pickle.dump(soc_nu_mat_store, open(f'{home}data/calibration/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_nus_soc_scost_mat_LFS.sav', 'wb'))\n",
+    "pickle.dump(reg_nu_mat_store, open(f'{home}data/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_nus_reg_scost_mat_LFS.sav', 'wb'))\n",
+    "pickle.dump(sic_nu_mat_store, open(f'{home}data/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_nus_sic_scost_mat_LFS.sav', 'wb'))\n",
+    "pickle.dump(soc_nu_mat_store, open(f'{home}data/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_nus_soc_scost_mat_LFS.sav', 'wb'))\n",
     "\n",
-    "pickle.dump(reg_frobenius_store, open(f'{home}data/calibration/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_reg_frobenius_LFS.sav', 'wb'))\n",
-    "pickle.dump(reg_pearson_store, open(f'{home}data/calibration/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_reg_pearson_LFS.sav', 'wb'))\n",
-    "pickle.dump(sic_frobenius_store, open(f'{home}data/calibration/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_sic_frobenius_LFS.sav', 'wb'))\n",
-    "pickle.dump(sic_pearson_store, open(f'{home}data/calibration/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_sic_pearson_LFS.sav', 'wb'))\n",
-    "pickle.dump(soc_frobenius_store, open(f'{home}data/calibration/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_soc_frobenius_LFS.sav', 'wb'))\n",
-    "pickle.dump(soc_pearson_store, open(f'{home}data/calibration/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_soc_pearson_LFS.sav', 'wb'))\n",
-    "pickle.dump(comb_frobenius_store, open(f'{home}data/calibration/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_comb_frobenius_LFS.sav', 'wb'))\n",
-    "pickle.dump(comb_pearson_store, open(f'{home}data/calibration/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_comb_pearson_LFS.sav', 'wb'))\n",
-    "pickle.dump(comb_abserr_metric_store, open(f'{home}data/calibration/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_comb_abserr_metric_LFS.sav', 'wb'))"
+    "pickle.dump(reg_frobenius_store, open(f'{home}data/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_reg_frobenius_LFS.sav', 'wb'))\n",
+    "pickle.dump(reg_pearson_store, open(f'{home}data/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_reg_pearson_LFS.sav', 'wb'))\n",
+    "pickle.dump(sic_frobenius_store, open(f'{home}data/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_sic_frobenius_LFS.sav', 'wb'))\n",
+    "pickle.dump(sic_pearson_store, open(f'{home}data/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_sic_pearson_LFS.sav', 'wb'))\n",
+    "pickle.dump(soc_frobenius_store, open(f'{home}data/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_soc_frobenius_LFS.sav', 'wb'))\n",
+    "pickle.dump(soc_pearson_store, open(f'{home}data/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_soc_pearson_LFS.sav', 'wb'))\n",
+    "pickle.dump(comb_frobenius_store, open(f'{home}data/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_comb_frobenius_LFS.sav', 'wb'))\n",
+    "pickle.dump(comb_pearson_store, open(f'{home}data/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_comb_pearson_LFS.sav', 'wb'))\n",
+    "pickle.dump(comb_abserr_metric_store, open(f'{home}data/graddescent_N{N}_reps{sim_num}_GDruns{fitrun_num}_ssthresh{ss_threshold}_comb_abserr_metric_LFS.sav', 'wb'))"
    ]
   },
   {
