--- a/code/simulation/Calibration.ipynb
+++ b/code/simulation/Calibration.ipynb
@@ -242,7 +242,7 @@
     "cpr_dist = pd.read_csv(open(f'{home}data/consumptionpref_dist_reweighted_LFS_{regvar}_{sicvar}_{socvar}.csv'))['consumption_pref']\n",
     "\n",
     "### Populate data dictionary for input into simulation function\n",
-    "with open('%sdata/build_dict_LFS_v1.txt' % home, 'r') as file:\n",
+    "with open('%sdata/build_dict.txt' % home, 'r') as file:\n",
     "    data = file.read()    \n",
     "exec(data)\n",
     "\n",
