--- a/code/simulation/BasicSimulation.ipynb
+++ b/code/simulation/BasicSimulation.ipynb
@@ -228,7 +228,7 @@
    "outputs": [],
    "source": [
     "### Import simulation functions\n",
-    "import ABMrun_LFS_cleaned as sim\n",
+    "import ABMrun as sim\n",
     "\n",
     "steady_state_length = 250 # Number of rounds to estimate transition matrices in the steady state of the model\n",
     "fitrun_num = 10 # Run of calibration algorithm - leave as is\n",
