--- a/code/simulation/Calibration.ipynb
+++ b/code/simulation/Calibration.ipynb
@@ -266,7 +266,7 @@
    "outputs": [],
    "source": [
     "### Import simulation functions\n",
-    "import ABMrun_LFS_cleaned as sim\n",
+    "import ABMrun as sim\n",
     "\n",
     "# Set gradient descent calibration parameters\n",
     "fitrun_num = 1 # Number of times to run calibration algorithm\n",
