--- a/code/simulation/BasicSimulation.ipynb
+++ b/code/simulation/BasicSimulation.ipynb
@@ -125,7 +125,7 @@
     "vacancy_rate = num_vac/num_jobs\n",
     "P = int(N*(1+vacancy_rate)) # number of positions in the model\n",
     "granularity = 1 # Granularity for timestep (1 = yearly, 12 = monthly, 52 = weekly, etc.)\n",
-    "job_destruction_rate = 0.0463 # ratio of positions randomly destroyed in 1 iteration (Value from Aron's calibration)\n",
+    "job_destruction_rate = 0.0463 # ratio of positions randomly destroyed in 1 iteration \n",
     "job_creation_rate = job_destruction_rate # ratio of positions randomly created in 1 iteration\n",
     "PD = int(job_destruction_rate*P) # Get the number of positions to be destroyed\n",
     "PC = int(job_creation_rate*P) # Get the number of positions to be created\n",
@@ -204,7 +204,7 @@
     "# cpr_dist = cpr_dist[cpr_dist>0]\n",
     "\n",
     "### Populate data dictionary for input into simulation function\n",
-    "with open('%sdata/build_dict_LFS_v1.txt' % home, 'r') as file:\n",
+    "with open('%sdata/build_dict.txt' % home, 'r') as file:\n",
     "    data = file.read()    \n",
     "exec(data)\n",
     "\n",
@@ -230,7 +230,6 @@
     "### Import simulation functions\n",
     "import ABMrun as sim\n",
     "\n",
-    "steady_state_length = 250 # Number of rounds to estimate transition matrices in the steady state of the model\n",
     "fitrun_num = 10 # Run of calibration algorithm - leave as is\n",
     "sim_num = 15 #number of simulations to run in parallel during calibratiion - leave as is\n",
     "\n",
