--- a/code/simulation/ShockSimulation.ipynb
+++ b/code/simulation/ShockSimulation.ipynb
@@ -186,7 +186,7 @@
     "activation_rate_unemployed = adict['activation_dict']['unemployed_active_weight']/adict['activation_dict']['unemployed_weight'] #Rate at which unemployed workers are activated to perform a job search (set based roughly on 1 - mean economic inactivity rate for 2019, taken from https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/bulletins/employmentintheuk/april2021)\n",
     "activation_rate_employed = adict['activation_dict']['employed_active_weight']/adict['activation_dict']['employed_weight'] #Ratio controlling the relative frequency with which employed workers are actively searching (as compared to the unemployed) \n",
     "sample_size = 1 # Number of candidate positions each active worker will sample within a timestep\n",
-    "gamma = 0.9662 # discount factor for utility calcs, from ONS WAS survey (pulled from Aron's code)\n",
+    "gamma = 0.9662 # discount factor for utility calcs\n",
     "#Global min/max income for generating wages\n",
     "wage_max = idict['income_dict']['max_annincome']\n",
     "wage_min = idict['income_dict']['min_annincome']\n",
