--- a/code/simulation/BasicSimulation.ipynb
+++ b/code/simulation/BasicSimulation.ipynb
@@ -135,7 +135,7 @@
     "survival_dat = pd.read_excel(f'{home}data/nationallifetable_20172019_wmeans.xlsx')\n",
     "# Convert to numpy array for computational efficiency\n",
     "worker_survival_rates = np.asarray(survival_dat.mean_survival)\n",
-    "activation_rate_unemployed = adict['activation_dict']['unemployed_active_weight']/adict['activation_dict']['unemployed_weight'] #0.7923 #Rate at which unemployed workers are activated to perform a job search (set based roughly on 1 - mean economic inactivity rate for 2019, taken from https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/bulletins/employmentintheuk/april2021)\n",
+    "activation_rate_unemployed = adict['activation_dict']['unemployed_active_weight']/adict['activation_dict']['unemployed_weight'] #Rate at which unemployed workers are activated to perform a job search (set based roughly on 1 - mean economic inactivity rate for 2019, taken from https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork/employmentandemployeetypes/bulletins/employmentintheuk/april2021)\n",
     "activation_rate_employed = adict['activation_dict']['employed_active_weight']/adict['activation_dict']['employed_weight'] #Ratio controlling the relative frequency with which employed workers are actively searching (as compared to the unemployed) \n",
     "sample_size = 1 # Number of candidate positions each active worker will sample within a timestep\n",
     "gamma = 0.9662 # discount factor for utility calculations\n",
