--- a/code/simulation/BasicSimulation.ipynb
+++ b/code/simulation/BasicSimulation.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "## Overview\n",
     "\n",
-    "This notebook provides an overview of how to run a basic simulation of the UK labour market model (i.e. without introducing shocks). \n",
+    "This notebook provides an overview of how to run a basic simulation of the UK labour flow network model (i.e. without introducing shocks). \n",
     "\n",
     "Throughout the notebook, we use the acronyms SIC for \"Standard Industrial Classification\", and SOC for \"Standard Occupational Classification\".\n",
     "\n",
