--- a/code/simulation/ShockSimulation.ipynb
+++ b/code/simulation/ShockSimulation.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "## Overview\n",
     "\n",
-    "This notebook provides an overview of how to run simulations of the UK labour market model where a shock is introduced. \n",
+    "This notebook provides an overview of how to run simulations of the UK labour flow network model where a shock is introduced. \n",
     "\n",
     "Throughout the notebook, we use the acronyms SIC for \"Standard Industrial Classification\", SOC for \"Standard Occupational Classification\", and LFN for \"labour flow network\".\n",
     "\n",
