--- a/code/simulation/Calibration.ipynb
+++ b/code/simulation/Calibration.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "## Overview\n",
     "\n",
-    "This notebook provides an overview of how to calibrate the UK labour market model. \n",
+    "This notebook provides an overview of how to calibrate the UK labour flow network model. \n",
     "\n",
     "Throughout the notebook, we use the acronyms SIC for \"Standard Industrial Classification\", SOC for \"Standard Occupational Classification\", and LFN for \"labour flow network\".\n",
     "\n",
